#include "FileViewModel.h"

namespace MyCloud::Desktop::ViewModels
{
    FileViewModel::FileViewModel()
    {
    }
}
