#pragma once

namespace MyCloud::Desktop::Views
{
    class FileManagerPage
    {
    public:
        FileManagerPage();
    };
}
