#pragma once

namespace MyCloud::Desktop::Views
{
    class HomePage
    {
    public:
        HomePage();
    };
}
