#pragma once

namespace MyCloud::Desktop::Views
{
    class LoginPage
    {
    public:
        LoginPage();
    };
}
