#pragma once

namespace MyCloud::Desktop::Views
{
    class SharePage
    {
    public:
        SharePage();
    };
}
