#pragma once

namespace MyCloud::Desktop::Views
{
    class UploadPage
    {
    public:
        UploadPage();
    };
}
