package com.gm222.server.controller;

import model.dto.LoginRequest;
import model.dto.RegisterRequest;
import model.vo.ApiResponse;


public class AuthController {

    ApiResponse register (RegisterRequest registerRequest) {
        return null;
    }
    ApiResponse login (LoginRequest loginRequest) {
        return null;
    }

}
