package com.mycloud.controller;

public class ShareController {
}
